--- a/css/style.css
+++ b/css/style.css
@@ -16,24 +16,10 @@
         GENERAL
 
 ------------------------------*/
-
-.container > * {
-  max-width: 1200px;
+section.container > div,
+main.container > div > div {
+  width: 1200px;
   margin: auto;
-}
-
-main div {
-  min-height: 600px;
-}
-
-.mlarge {
-  min-height: 1000px;
-}
-.footer-first {
-  min-height: 620px;
-}
-.footer-second {
-  min-height: 110px;
 }
 
 /*---------------------------
@@ -41,6 +27,7 @@ main div {
     HEADER
 
 ------------------------------*/
+
 .head {
   min-height: 80px;
   display: flex;
@@ -92,6 +79,52 @@ main div {
   background-color: #ee82ee;
   width: 60%;
   height: 80%;
+}
+
+/*---------------------------
+
+    MAIN
+
+------------------------------*/
+main {
+  height: 2800px;
+}
+
+main .first-bg {
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main .second-bg {
+  background-color: #d3d3d3;
+  height: 600px;
+}
+
+.rectangle {
+  height: 80%;
+  width: 60%;
+  border-style: dashed;
+  border-width: 2px;
+  display: flex;
+}
+
+.blue {
+  display: inline-block;
+  width: 60%;
+  height: 100%;
+  background-color: #1e90ff;
+  border-right-style: dashed;
+  border-width: 2px;
+}
+
+.pink {
+  background-color: #ffc0cb;
+  height: 100%;
+  width: 40%;
+  display: inline-block;
+
+  justify-content: right;
 }
 
 /*---------------------------
