--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,9 @@ main .first-bg {
 main .second-bg {
   background-color: #d3d3d3;
   height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .rectangle {
@@ -113,9 +116,14 @@ main .second-bg {
   display: inline-block;
   width: 60%;
   height: 100%;
-  background-color: #1e90ff;
-  border-right-style: dashed;
   border-width: 2px;
+  background-color: #1e90ff;
+}
+.first-bg .blue {
+  border-right-style: dashed;
+}
+.second-bg .blue {
+  border-left-style: dashed;
 }
 
 .pink {
@@ -123,8 +131,7 @@ main .second-bg {
   height: 100%;
   width: 40%;
   display: inline-block;
-
-  justify-content: right;
+  justify-content: start;
 }
 
 /*---------------------------
